2011-11-04  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* pinfo.h (pinfo::reattach): Only set destroy to false when
	proc_subproc succeeds.  Return true for success.
	* sigproc.cc (child_info_spawn::reattach_children): Try harder to clean
	up on error by detecting reattach failures too.

2011-11-04  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* sigproc.cc (child_info_spawn::reattach_children): Clean up handle
	when can't open parent process or suffer handle leak.

2011-11-03  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* sigproc.cc (child_info::sync): Report on exit code in strace output.
	(child_info::proc_retry): Don't consider STATUS_ACCESS_VIOLATION as a
	restartable event.

2011-11-03  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* sigproc.cc (child_info_spawn::reattach_children): Avoid issuing an
	error when we can't duplicate from "parent" since it is probably ok if
	children of the previous owner of the pid disappear.

2011-11-03  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (off_current): Define local in fhandler_base::raw_write.
	Drop erroneous NO_COPY, add _RDATA to make R/O.
	(off_append): Ditto.
	* globals.cc (_RDATA): Move definition from here...
	* winsup.h: ...to here.

2011-10-30  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler.h (fhandler_pipe::create_selectable): Remove optional
	argument, take an options argument for CreateNamedPipe/CreateFile.
	Change handle arguments to expect pointers.
	(fhandler_fifo::fifo_state): Delete.
	(fhandler_fifo::dummy_client): Ditto.
	(fhandler_fifo::open_nonserver): Ditto.
	(fhandler_fifo::wait_state): Ditto.
	(fhandler_fifo::raw_write): Ditto.
	(fhandler_fifo::read_ready): New field.
	(fhandler_fifo::write_ready): Ditto.
	(fhandler_fifo::wait): Modify argument.
	(fhandler_fifo::fifo_name): Add a new argument.
	(fhandler_fifo::fixup_after_fork): New function.
	* fhandler_fifo.cc (fhandler_fifo::fhandler_fifo): Remove
	initialization of expunged elements.  Initialize new handles to NULL.